Wrapping text was fixed

--- a/public/css/checklist.css
+++ b/public/css/checklist.css
@@ -590,7 +590,7 @@ padding-left: 5px;
 	font-family: 'Montserrat', sans-serif;
 	color: #FFF; /* text color */
 	text-shadow: 0 1px 1px #000; /* drop shadow */
-	font-size:15pt;
+	font-size:14pt;
 }
 
 #banner_txt_main a{
